--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,19 @@
 <app-banner src="images/banner-homepage.png" alt="Banner Jornada"></app-banner>
 <app-container>
-    <h1>Teste</h1>
+    <h2>Promoções</h2>
+    <div class="card-wrapper">
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+        <app-card-busca></app-card-busca>
+    </div>
+    <h2>Depoimentos</h2>
+    <div class="card-wrapper">
+        <app-card-depoimentos></app-card-depoimentos>
+        <app-card-depoimentos></app-card-depoimentos>
+        <app-card-depoimentos></app-card-depoimentos>
+    </div>
 </app-container>
+<app-footer></app-footer>
