--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,9 +2,9 @@
     <mat-toolbar>
         <img src="images/logo.png" alt=" Logo da aplicação jornada milhas">
         <span class="spacer"></span>
-        <button mat-button>Vender milhas</button>
-        <button mat-button>Sobre</button>
-        <button mat-raised-button>CADASTRE-SE</button>
+        <button mat-button class="button__header">Vender milhas</button>
+        <button mat-button class="button__header">Sobre</button>
+        <button mat-raised-button color="primary">CADASTRE-SE</button>
         <button mat-stroked-button>Vender milhas</button>
     </mat-toolbar>
 </header>
